# antryg

./: .gitignore  Cargo.toml  README.md
maxima/: first.max  integrate.max
src/: cli.rs  config.rs  error.rs  expr.rs  joidis.rs  joydis.rs  lib.rs  mahal.rs  main.rs  marge.rs  out.rs  scalar.rs  slate.rs
src/expr/: fun.rs  infix.rs  matrix.rs  num.rs  tag.rs  var.rs
src/scalar/: elem.rs  frac.rs  var.rs
